# providers/alicloud/catalog/source/openapi.json
@@ -3237,6 +3237,13 @@
         "x-operation-call": {"product":"Dts","version":"2020-01-01","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"dts.{region}.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
       }
     },
+    "/resource-manager/folders": {
+      "get": {
+        "operationId": "ResourceManager.ListFoldersForParent",
+        "x-operation-name": "ListFoldersForParent",
+        "x-operation-call": {"product":"ResourceManager","version":"2020-03-31","style":"RPC","protocol":"HTTPS","method":"POST","path":"/","endpoint":"resourcemanager.aliyuncs.com","request_body_type":"formData","body_type":"json","parameter_position":"query"}
+      }
+    },
     "/resource-manager/accounts": {
       "get": {
         "operationId": "ResourceManager.ListAccounts",
@@ -4586,6 +4593,7 @@
     {"nativeType": "ACS::RAM::Role", "class": "identity.role", "displayName": "RAM Role", "scopeKinds": ["global"]},
     {"nativeType": "ACS::RAM::User", "class": "identity.user", "displayName": "RAM User", "scopeKinds": ["global"]},
     {"nativeType": "ACS::ResourceManager::Account", "class": "identity.member_account", "displayName": "Resource Directory Member", "scopeKinds": ["global"]},
+    {"nativeType": "ACS::ResourceManager::Folder", "class": "identity.folder", "displayName": "Resource Directory Folder", "scopeKinds": ["global"]},
     {"nativeType": "ACS::RocketMQ::ConsumerGroup", "class": "messaging.consumer_group", "displayName": "RocketMQ 5.0 Consumer Group", "scopeKinds": ["region"]},
     {"nativeType": "ACS::RocketMQ::Topic", "class": "messaging.topic", "displayName": "RocketMQ 5.0 Topic", "scopeKinds": ["region"]},
     {"nativeType": "ACS::RTC::Application", "class": "media.rtc_application", "displayName": "RTC Application", "scopeKinds": ["global"]},
